<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24sp"
        android:id="@+id/rowLayout">

    <TextView
            android:id="@+id/id_txt"
            android:text="1"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.002"/>
    <TextView
            android:text="@string/nikita"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/firstName_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/lastName_txt"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/nage"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lastName_txt"
            app:layout_constraintStart_toEndOf="@+id/firstName_txt"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/age_txt"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/_23"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/age_txt"
            app:layout_constraintStart_toEndOf="@+id/lastName_txt" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>